:bug: :whale: Fixed bugs with Graphic Editor and added all dockerfiles

--- a/Dockerfile.PhIntegrationTests
+++ b/Dockerfile.PhIntegrationTests
@@ -2,19 +2,15 @@ FROM mcr.microsoft.com/dotnet/core/sdk:3.1-buster AS build
 WORKDIR /app
 
 COPY Backend/Backend.csproj Backend/
-COPY WebApplication/WebApplication.csproj WebApplication/
-COPY IntegrationTests/IntegrationTests.csproj IntegrationTests/
 COPY PharmacyIntegration/PharmacyIntegration.csproj PharmacyIntegration/
+COPY PhIntegrationTests/PhIntegrationTests.csproj PhIntegrationTests/
 
 ENV DATABASE_USERNAME = $DATABASE_USERNAME
 ENV DATABASE_PASSWORD = $DATABASE_PASSWORD
 ENV DATABASE_HOST = $DATABASE_HOST
 ENV DATABASE_SCHEMA = $DATABASE_SCHEMA
 
-RUN dotnet restore PharmacyIntegration/PharmacyIntegration.csproj
-RUN dotnet restore WebApplication/WebApplication.csproj
-RUN dotnet restore IntegrationTests/IntegrationTests.csproj
-
+RUN dotnet restore PhIntegrationTests/PhIntegrationTests.csproj
 
 RUN apt-get update && apt-get upgrade -y && apt-get install -y nodejs npm
 RUN npm install npm@latest -g
@@ -32,6 +28,6 @@ RUN dotnet ef migrations add Init
 FROM build AS test
 LABEL test=true
 
-WORKDIR /app/IntegrationTests
+WORKDIR /app/PhIntegrationTests
 CMD ["dotnet", "test"]
 
