--- a/Dockerfile.Web
+++ b/Dockerfile.Web
@@ -17,8 +17,6 @@ WORKDIR /app
 COPY Backend/Backend.csproj Backend/
 COPY WebApplication/WebApplication.csproj WebApplication/
 
-COPY WebApplication/ WebApplication/
-
 RUN dotnet restore WebApplication/WebApplication.csproj
 
 COPY . .
@@ -31,6 +29,7 @@ RUN dotnet tool install -g dotnet-ef --version 3.1.9
 RUN dotnet ef migrations add Init
 
 WORKDIR /app
+COPY --from=builder app/dist/WebApplicationFrontend/ WebApplication/wwwroot/dist/
 RUN dotnet publish WebApplication/WebApplication.csproj -c Release -o out
 
 FROM mcr.microsoft.com/dotnet/core/aspnet:3.1-buster-slim AS runtime
