--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,5 +1,9 @@
 services:
+  
   WebApplicationPostgres:
+    build: 
+      context: .
+      dockerfile: Dockerfile.Web
     image: web
     restart: on-failure
     networks:
@@ -9,10 +13,15 @@ services:
     environment:
       DATABASE_USERNAME: "root"
       DATABASE_PASSWORD: "root"
-      DATABASE_TYPE: "postgres"
+      DATABASE_HOST: "mysql"
       DATABASE_HOST: "postgres"
+      DATABASE_TYPE: "postgres"
       DATABASE_SCHEMA: "mydb1"
-      PORT: 8080
-      STAGE: "test"
+      STAGE: "production"
+      PORT: "8080"
     ports:
       - "8080:8080"
+    volumes:
+      - postgres-data:/var/lib/postgres:rw
+
+  
