--- a/Dockerfile.PhIntegration
+++ b/Dockerfile.PhIntegration
@@ -1,3 +1,59 @@
+
+FROM mcr.microsoft.com/dotnet/core/sdk:3.1-alpine AS build
+
+RUN apk add --update nodejs nodejs-npm
+
+# /src
+#   Backend/
+#   PharmacyIntegration/
+# /app
+RUN mkdir /src
+WORKDIR /src
+
+COPY Backend/Backend.csproj Backend/Backend.csproj
+COPY PharmacyIntegration/PharmacyIntegration.csproj PharmacyIntegration/PharmacyIntegration.csproj
+
+RUN dotnet restore Backend/Backend.csproj
+RUN dotnet restore PharmacyIntegration/PharmacyIntegration.csproj
+
+RUN mkdir -p /src/PharmacyIntegration/vueclient
+
+COPY PharmacyIntegration/vueclient/package.json /src/PharmacyIntegration/vueclient/package.json
+
+WORKDIR /src/PharmacyIntegration/vueclient
+RUN npm install -g @vue/cli
+RUN npm install --save axios vue-axios
+RUN npm install
+
+WORKDIR /src
+
+COPY . ./
+
+RUN wget -q -O /etc/apk/keys/sgerrand.rsa.pub https://alpine-pkgs.sgerrand.com/sgerrand.rsa.pub
+RUN wget https://github.com/sgerrand/alpine-pkg-glibc/releases/download/2.32-r0/glibc-2.32-r0.apk
+RUN apk add glibc-2.32-r0.apk
+
+WORKDIR /src/PharmacyIntegration/vueclient
+RUN npm run build
+
+WORKDIR /src
+RUN dotnet publish /src/PharmacyIntegration/PharmacyIntegration.csproj -c Release
+
+FROM mcr.microsoft.com/dotnet/core/aspnet:3.1-alpine
+WORKDIR /app
+COPY --from=build /src .
+COPY --from=build /src/PharmacyIntegration/vueclient /app/PharmacyIntegration/bin/Release/netcoreapp3.1/vueclient
+RUN apk add --update nodejs nodejs-npm
+
+WORKDIR /app/PharmacyIntegration/bin/Release/netcoreapp3.1/vueclient
+RUN npm install -g @vue/cli
+RUN npm install --save axios vue-axios
+RUN npm install
+# NOTE(Jovan): Might die
+
+WORKDIR /app/PharmacyIntegration/bin/Release/netcoreapp3.1/
+EXPOSE 50202
+ENTRYPOINT [ "dotnet", "PharmacyIntegration.dll" ]
 FROM mcr.microsoft.com/dotnet/core/sdk:3.1-buster AS build
 WORKDIR /app
 
@@ -30,6 +86,3 @@ ENV ASPNETCORE_URLS http://*:$PORT
 EXPOSE $PORT
 COPY --from=publish /app/out .
 ENTRYPOINT ["dotnet", "PharmacyIntegration.dll"]
-
-
-
