--- a/Dockerfile.PhIntegrationTests
+++ b/Dockerfile.PhIntegrationTests
@@ -5,17 +5,14 @@ COPY Backend/Backend.csproj Backend/
 COPY PharmacyIntegration/PharmacyIntegration.csproj PharmacyIntegration/
 COPY PhIntegrationTests/PhIntegrationTests.csproj PhIntegrationTests/
 
-ENV DATABASE_USERNAME = $DATABASE_USERNAME
-ENV DATABASE_PASSWORD = $DATABASE_PASSWORD
-ENV DATABASE_HOST = $DATABASE_HOST
-ENV DATABASE_SCHEMA = $DATABASE_SCHEMA
-
 RUN dotnet restore PhIntegrationTests/PhIntegrationTests.csproj
 
 RUN apt-get update && apt-get upgrade -y && apt-get install -y nodejs npm
 RUN npm install npm@latest -g
 RUN npm install -g npm
 RUN npm install
+
+RUN apt-get update && apt-get install -y --allow-unauthenticated libc6-dev libgdiplus libx11-dev && rm -rf /var/lib/apt/lists/*
 
 COPY . .
 
@@ -30,4 +27,3 @@ LABEL test=true
 
 WORKDIR /app/PhIntegrationTests
 CMD ["dotnet", "test"]
-
