--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,8 +41,8 @@ services:
       - postgres-data:/var/lib/postgres
 
   PhIntegrationSql:
-    image: ph-adapters
-    container_name: phintegration
+    image: ph
+    container_name: ph_integration
     restart: on-failure
     networks:
       - demo
@@ -59,11 +59,10 @@ services:
       - "50202:50202"
     volumes:
       - mysql-data:/var/lib/mysql:rw
+
   GraphicEditorWebServer:
-    build: 
-      context: .
-      dockerfile: Dockerfile.GraphicEditor
-    image: graphic-editor
+    image: stefan7/medbaytechge:latest
+    container_name: graphic_editor
     restart: on-failure
     networks:
       - demo
@@ -82,10 +81,8 @@ services:
       - mysql-data:/var/lib/mysql:rw
 
   PhIntegrationTests:
-      build: 
-        context: .
-        dockerfile: Dockerfile.PhIntegrationTests
-      image: ph-tests # stefan7/medbaytechphtest:latest
+      image: stefan7/medbaytechphtest:latest
+      container_name: ph_integration_tests
       depends_on:
         - mysql
       environment:
@@ -103,10 +100,8 @@ services:
       - mysql-data:/var/lib/mysql
 
   WebIntegrationTests:
-      build: 
-        context: .
-        dockerfile: Dockerfile.WebIntegrationTests
-      image: web-tests # stefan7/medbaytechwebtest:latest
+      image: stefan7/medbaytechwebtest:latest
+      container_name: web_tests
       depends_on:
         - mysql
       environment:
@@ -139,10 +134,7 @@ services:
 #      - "8082:8082"
 
   UnitTests:
-    build: 
-      context: .
-      dockerfile: Dockerfile.UnitTests
-    image: unit-tests
-    container_name: unit-tests-container
+    image: stefan7/medbaytechunit
+    container_name: unit_tests
     restart: on-failure
     
