--- a/MedbayTech.Feedback/MedbayTech.Feedback.csproj
+++ b/MedbayTech.Feedback/MedbayTech.Feedback.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -6,7 +6,6 @@
 
   <ItemGroup>
     <Folder Include="Domain\" />
-    <Folder Include="Application\" />
     <Folder Include="Infrastructure\Database\" />
   </ItemGroup>
 
