:whale: Fixed docker compose for ph-integration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,7 @@ services:
 
   PhIntegrationSql:
     image: ph
-    container_name: ph_integration
+    container_name: stefan7/medbaytechph
     restart: on-failure
     networks:
       - demo
