--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -47,6 +47,7 @@ services:
       container_name: ph_integration_tests
       depends_on:
         - mysql
+      restart: on-failure
       environment:
         DATABASE_USERNAME: "root"
         DATABASE_PASSWORD: "root"
@@ -54,6 +55,8 @@ services:
         DATABASE_TYPE: "mysql"
         DATABASE_SCHEMA: "newdb"
         STAGE: "test"
+        WAIT_HOSTS: mysql:3306
+
       expose: 
         - "80"
       networks: 
@@ -66,6 +69,7 @@ services:
       container_name: web_tests
       depends_on:
         - mysql
+      restart: on-failure
       environment:
         DATABASE_USERNAME: "root"
         DATABASE_PASSWORD: "root"
