--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -83,48 +83,48 @@ services:
   #   volumes:
   #     - mysql-data:/var/lib/mysql:rw
 
-  PhIntegrationTests:
-      image: stefan7/medbaytechphtest:latest
-      container_name: ph_integration_tests
-      restart: on-failure
+  # PhIntegrationTests:
+  #     image: stefan7/medbaytechphtest:latest
+  #     container_name: ph_integration_tests
+  #     restart: on-failure
 
-      depends_on:
-        - mysql
-      environment:
-        DATABASE_USERNAME: "root"
-        DATABASE_PASSWORD: "root"
-        DATABASE_HOST: "mysql"
-        DATABASE_TYPE: "mysql"
-        DATABASE_SCHEMA: "newdb"
-        STAGE: "test"
-        command: --innodb_use_native_aio=0
-      expose: 
-        - "80"
-      networks: 
-        - demo
-      volumes:
-      - mysql-data:/var/lib/mysql
+  #     depends_on:
+  #       - mysql
+  #     environment:
+  #       DATABASE_USERNAME: "root"
+  #       DATABASE_PASSWORD: "root"
+  #       DATABASE_HOST: "mysql"
+  #       DATABASE_TYPE: "mysql"
+  #       DATABASE_SCHEMA: "newdb"
+  #       STAGE: "test"
+  #       command: --innodb_use_native_aio=0
+  #     expose: 
+  #       - "80"
+  #     networks: 
+  #       - demo
+  #     volumes:
+  #     - mysql-data:/var/lib/mysql
 
-  WebIntegrationTests:
-      image: stefan7/medbaytechwebtest:latest
-      container_name: web_tests
-      restart: on-failure
+  # WebIntegrationTests:
+  #     image: stefan7/medbaytechwebtest:latest
+  #     container_name: web_tests
+  #     restart: on-failure
 
-      depends_on:
-        - mysql
-      environment:
-        DATABASE_USERNAME: "root"
-        DATABASE_PASSWORD: "root"
-        DATABASE_HOST: "mysql"
-        DATABASE_TYPE: "mysql"
-        DATABASE_SCHEMA: "newdb"
-        STAGE: "test"
-      expose: 
-        - "81"
-      networks: 
-        - demo
-      volumes:
-      - mysql-data:/var/lib/mysql    
+  #     depends_on:
+  #       - mysql
+  #     environment:
+  #       DATABASE_USERNAME: "root"
+  #       DATABASE_PASSWORD: "root"
+  #       DATABASE_HOST: "mysql"
+  #       DATABASE_TYPE: "mysql"
+  #       DATABASE_SCHEMA: "newdb"
+  #       STAGE: "test"
+  #     expose: 
+  #       - "81"
+  #     networks: 
+  #       - demo
+  #     volumes:
+  #     - mysql-data:/var/lib/mysql    
         
 #  PhIntegrationSql:
 #    image: ph
@@ -163,4 +163,4 @@ services:
     ports:
       - "8080:8080"
     volumes:
-      - mysql-data:/var/lib/mysql    
+      - mysql-data:/var/lib/mysql:rw 
