--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -83,27 +83,26 @@ services:
   #   volumes:
   #     - mysql-data:/var/lib/mysql:rw
 
-  # PhIntegrationTests:
-  #     image: stefan7/medbaytechphtest:latest
-  #     container_name: ph_integration_tests
-  #     restart: on-failure
+  PhIntegrationTests:
+      image: stefan7/medbaytechphtest:latest
+      container_name: ph_integration_tests
+      restart: on-failure
 
-  #     depends_on:
-  #       - mysql
-  #     environment:
-  #       DATABASE_USERNAME: "root"
-  #       DATABASE_PASSWORD: "root"
-  #       DATABASE_HOST: "mysql"
-  #       DATABASE_TYPE: "mysql"
-  #       DATABASE_SCHEMA: "newdb"
-  #       STAGE: "test"
-  #       command: --innodb_use_native_aio=0
-  #     expose: 
-  #       - "80"
-  #     networks: 
-  #       - demo
-  #     volumes:
-  #     - mysql-data:/var/lib/mysql
+      depends_on:
+        - mysql
+      environment:
+        DATABASE_USERNAME: "root"
+        DATABASE_PASSWORD: "root"
+        DATABASE_HOST: "postgres"
+        DATABASE_TYPE: "postgres"
+        DATABASE_SCHEMA: "mydb1"
+        STAGE: "test"
+      expose: 
+        - "80"
+      networks: 
+        - demo
+      volumes:
+      - postgres-data:/var/lib/postgres:rw  
 
   WebIntegrationTests:
       image: stefan7/medbaytechwebtest:latest
