--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -83,46 +83,46 @@ services:
   #   volumes:
   #     - mysql-data:/var/lib/mysql:rw
 
-  PhIntegrationTests:
-      image: stefan7/medbaytechphtest:latest
-      container_name: ph_integration_tests
-      restart: on-failure
+  # PhIntegrationTests:
+  #     image: stefan7/medbaytechphtest:latest
+  #     container_name: ph_integration_tests
+  #     restart: on-failure
 
-      depends_on:
-        - postgres
-      environment:
-        DATABASE_USERNAME: "root"
-        DATABASE_PASSWORD: "root"
-        DATABASE_HOST: "postgres"
-        DATABASE_TYPE: "postgres"
-        DATABASE_SCHEMA: "mydb1"
-        STAGE: "test"
-      expose: 
-        - "80"
-      networks: 
-        - demo
-      volumes:
-      - postgres-data:/var/lib/postgres:rw  
+  #     depends_on:
+  #       - postgres
+  #     environment:
+  #       DATABASE_USERNAME: "root"
+  #       DATABASE_PASSWORD: "root"
+  #       DATABASE_HOST: "postgres"
+  #       DATABASE_TYPE: "postgres"
+  #       DATABASE_SCHEMA: "mydb1"
+  #       STAGE: "test"
+  #     expose: 
+  #       - "80"
+  #     networks: 
+  #       - demo
+  #     volumes:
+  #     - postgres-data:/var/lib/postgres:rw  
 
-  WebIntegrationTests:
-      image: stefan7/medbaytechwebtest:latest
-      container_name: web_tests
-      restart: on-failure
-      depends_on:
-        - postgres
-      environment:
-        DATABASE_USERNAME: "root"
-        DATABASE_PASSWORD: "root"
-        DATABASE_HOST: "postgres"
-        DATABASE_TYPE: "postgres"
-        DATABASE_SCHEMA: "mydb1"
-        STAGE: "test"
-      expose: 
-        - "81"
-      networks: 
-        - demo
-      volumes:
-      - postgres-data:/var/lib/postgres:rw  
+  # WebIntegrationTests:
+  #     image: stefan7/medbaytechwebtest:latest
+  #     container_name: web_tests
+  #     restart: on-failure
+  #     depends_on:
+  #       - postgres
+  #     environment:
+  #       DATABASE_USERNAME: "root"
+  #       DATABASE_PASSWORD: "root"
+  #       DATABASE_HOST: "postgres"
+  #       DATABASE_TYPE: "postgres"
+  #       DATABASE_SCHEMA: "mydb1"
+  #       STAGE: "test"
+  #     expose: 
+  #       - "81"
+  #     networks: 
+  #       - demo
+  #     volumes:
+  #     - postgres-data:/var/lib/postgres:rw  
 
 #  PhIntegrationSql:
 #    image: ph
