--- a/Dockerfile.WebAppIntegrationTests
+++ b/Dockerfile.WebAppIntegrationTests
@@ -15,7 +15,7 @@ RUN npm install
 
 COPY . .
 
-FROM build AS publish
+#FROM build AS publish
 WORKDIR /app/Backend
 ENV PATH $PATH:/root/.dotnet/tools
 RUN dotnet tool install -g dotnet-ef --version 3.1.9
