--- a/docker-compose.web.yml
+++ b/docker-compose.web.yml
@@ -1,32 +1,14 @@
 version: "3.8"
 
 volumes:
-  mysql-data: {}
-  web-sql:
   postgres-data: {}
-  test-data: {}
-  test-ph-data: {}
-  
+
 networks:
   demo:
     name: demo
     driver: bridge
 
-services:
-  # mysql:
-  #   image: mysql:latest
-  #   container_name: mysql
-  #   restart: always
-  #   networks:
-  #     - demo
-  #   environment:
-  #     MYSQL_DATABASE: "newdb"
-  #     MYSQL_USER: "root"
-  #     MYSQL_PASSWORD: "root"
-  #     MYSQL_ROOT_PASSWORD: "root"
-  #   volumes:
-  #     - mysql-data:/var/lib/mysql
-  
+services: 
   postgres:
     image: postgres:latest
     container_name: postgres
@@ -40,72 +22,11 @@ services:
     volumes:
       - postgres-data:/var/lib/postgres
 
-  # PhIntegrationSql:
-  #   build: 
-  #      context: .
-  #      dockerfile: Dockerfile.PhIntegration
-  #   image: phintegrationsql
-  #   container_name: ph_integration
-  #   restart: on-failure
-  #   networks:
-  #     - demo
-  #   depends_on:
-  #     - mysql
-  #   environment:
-  #     DATABASE_USERNAME: "root"
-  #     DATABASE_PASSWORD: "root"
-  #     DATABASE_HOST: "mysql"
-  #     DATABASE_SCHEMA: "newdb"
-  #     PORT: 50202
-  #     STAGE: "test"
-  #   ports:
-  #     - "50202:50202"
-  #   volumes:
-  #     - mysql-data:/var/lib/mysql:rw
-
-  # GraphicEditorWebServer:
-  #   image: stefan7/medbaytechge:latest
-  #   container_name: graphic_editor
-  #   restart: on-failure
-  #   networks:
-  #     - demo
-  #   depends_on:
-  #     - mysql
-  #   environment:
-  #     DATABASE_USERNAME: "root"
-  #     DATABASE_PASSWORD: "root"
-  #     DATABASE_HOST: "mysql"
-  #     DATABASE_SCHEMA: "newdb"
-  #     PORT: 8091
-  #     STAGE: "test"
-  #   ports:
-  #     - "8091:8091"
-  #   volumes:
-  #     - mysql-data:/var/lib/mysql:rw
-
-  # PhIntegrationTests:
-  #     image: stefan7/medbaytechphtest:latest
-  #     container_name: ph_integration_tests
-  #     restart: on-failure
-
-  #     depends_on:
-  #       - postgres
-  #     environment:
-  #       DATABASE_USERNAME: "root"
-  #       DATABASE_PASSWORD: "root"
-  #       DATABASE_HOST: "postgres"
-  #       DATABASE_TYPE: "postgres"
-  #       DATABASE_SCHEMA: "mydb1"
-  #       STAGE: "test"
-  #     expose: 
-  #       - "80"
-  #     networks: 
-  #       - demo
-  #     volumes:
-  #     - postgres-data:/var/lib/postgres:rw  
-
   WebIntegrationTests:
-      image: stefan7/medbaytechwebtest:latest
+      build: 
+        context: .
+        dockerfile: Dockerfile.WebAppIntegrationTests
+      image: web_integration_tests
       container_name: web_tests
       restart: on-failure
       depends_on:
@@ -122,45 +43,4 @@ services:
       networks: 
         - demo
       volumes:
-      - postgres-data:/var/lib/postgres:rw  
-
-#  PhIntegrationSql:
-#    image: ph
-#    container_name: phintegration
-#    restart: on-failure
-#    environment:
-#      PORT: 50202
-#      DATABASE_USERNAME: "root"
-#      DATABASE_PASSWORD: "root"
-#      DATABASE_HOST: "mysql"
-#      DATABASE_SCHEMA: "newdb"
-#      STAGE: "test"
-#      PORT: 8082
-#    ports:
-#      - "8082:8082"
-
-  # UnitTests:
-  #   image: stefan7/medbaytechunit
-  #   container_name: unit_tests
-  #   restart: on-failure
-
-  WebApplicationPostgres:
-    image: stefan7/medbaytechweb:latest
-    container_name: web
-    restart: on-failure
-    networks:
-      - demo
-    depends_on:
-      - postgres
-    environment:
-      DATABASE_USERNAME: "root"
-      DATABASE_PASSWORD: "root"
-      DATABASE_HOST: "postgres"
-      DATABASE_TYPE: "postgres"
-      DATABASE_SCHEMA: "mydb1"
-      STAGE: "production"
-      PORT: "8080"
-    ports:
-      - "8080:8080"
-    volumes:
       - postgres-data:/var/lib/postgres:rw
