Running integration tests on azure with docker compose (#86)
* :whale: Fixed dockercompose

* :whale: Changing ports for azure

* :whale: Configuring compose for azure

* :whale: Configuring compose for azure

* :whale: Configuring compose for azure

* :rotating_light: Added smoketests to git

* :whale: Configuring compose for azure

* :whale: Configuring compose for azure

* :whale: Configuring compose for azure

* :whale: Configuring compose for azure

* :whale: Configuring compose for azure

* :whale: Configuring compose for azure

* :whale: Configuring compose for azure

* :whale: Configuring compose for azure

* :whale: Configuring compose for azure

* :whale: Configuring compose for azure

* :whale: Configuring compose for azure

* :whale: Configuring compose for azure

* :whale: Configuring compose for azure

* :whale: Configuring compose for azure

* :whale: Configuring compose for azure

* :whale: Configuring compose for azure

* :whale: Configuring compose for azure

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,19 +13,19 @@ networks:
     driver: bridge
 
 services:
-  mysql:
-    image: mysql:latest
-    container_name: mysql
-    restart: always
-    networks:
-      - demo
-    environment:
-      MYSQL_DATABASE: "newdb"
-      MYSQL_USER: "root"
-      MYSQL_PASSWORD: "root"
-      MYSQL_ROOT_PASSWORD: "root"
-    volumes:
-      - mysql-data:/var/lib/mysql
+   mysql:
+     image: mysql:latest
+     container_name: mysql
+     restart: always
+     networks:
+       - demo
+     environment:
+       MYSQL_DATABASE: "newdb"
+       MYSQL_USER: "root"
+       MYSQL_PASSWORD: "root"
+       MYSQL_ROOT_PASSWORD: "root"
+     volumes:
+       - mysql-data:/var/lib/mysql
   
   postgres:
     image: postgres:latest
@@ -41,7 +41,10 @@ services:
       - postgres-data:/var/lib/postgres
 
   PhIntegrationSql:
-    image: stefan7/medbaytechph
+    build: 
+       context: .
+       dockerfile: Dockerfile.PhIntegration
+    image: phintegrationsql
     container_name: ph_integration
     restart: on-failure
     networks:
@@ -73,68 +76,15 @@ services:
       DATABASE_PASSWORD: "root"
       DATABASE_HOST: "mysql"
       DATABASE_SCHEMA: "newdb"
-      PORT: 8084
+      PORT: 8091
       STAGE: "test"
     ports:
-      - "8084:8084"
+      - "8091:8091"
     volumes:
       - mysql-data:/var/lib/mysql:rw
-
-  PhIntegrationTests:
-      image: stefan7/medbaytechphtest:latest
-      container_name: ph_integration_tests
-      depends_on:
-        - mysql
-      environment:
-        DATABASE_USERNAME: "root"
-        DATABASE_PASSWORD: "root"
-        DATABASE_HOST: "mysql"
-        DATABASE_TYPE: "mysql"
-        DATABASE_SCHEMA: "newdb"
-        STAGE: "test"
-      expose: 
-        - "80"
-      networks: 
-        - demo
-      volumes:
-      - mysql-data:/var/lib/mysql
-
-  WebIntegrationTests:
-      image: stefan7/medbaytechwebtest:latest
-      container_name: web_tests
-      depends_on:
-        - mysql
-      environment:
-        DATABASE_USERNAME: "root"
-        DATABASE_PASSWORD: "root"
-        DATABASE_HOST: "mysql"
-        DATABASE_TYPE: "mysql"
-        DATABASE_SCHEMA: "newdb"
-        STAGE: "test"
-      expose: 
-        - "81"
-      networks: 
-        - demo
-      volumes:
-      - mysql-data:/var/lib/mysql    
-        
-#  PhIntegrationSql:
-#    image: ph
-#    container_name: phintegration
-#    restart: on-failure
-#    environment:
-#      PORT: 50202
-#      DATABASE_USERNAME: "root"
-#      DATABASE_PASSWORD: "root"
-#      DATABASE_HOST: "mysql"
-#      DATABASE_SCHEMA: "newdb"
-#      STAGE: "test"
-#      PORT: 8082
-#    ports:
-#      - "8082:8082"
 
   UnitTests:
     image: stefan7/medbaytechunit
     container_name: unit_tests
     restart: on-failure
-    
+
