--- a/docker-compose.web.yml
+++ b/docker-compose.web.yml
@@ -23,10 +23,7 @@ services:
       - postgres-data:/var/lib/postgres
 
   WebIntegrationTests:
-      build: 
-        context: .
-        dockerfile: Dockerfile.WebAppIntegrationTests
-      image: web_integration_tests
+      image: stefan7/test1
       container_name: web_tests
       restart: on-failure
       depends_on:
