--- a/MedbayTech.PatientDocuments/MedbayTech.PatientDocuments.csproj
+++ b/MedbayTech.PatientDocuments/MedbayTech.PatientDocuments.csproj
@@ -39,4 +39,8 @@
 		<PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Domain\ValueObjects\" />
+	</ItemGroup>
+
 </Project>
