--- a/MedbayTech.Users/appsettings.json
+++ b/MedbayTech.Users/appsettings.json
@@ -6,5 +6,13 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "MailSettings": {
+    "Mail": "medbaytech@gmail.com",
+    "DisplayName": "MedbayTech",
+    "Password": "medbaytech123",
+    "Host": "smtp.gmail.com",
+    "Port": 587
+  }
 }
