--- a/MedbayTech.Users/MedbayTech.Users.csproj
+++ b/MedbayTech.Users/MedbayTech.Users.csproj
@@ -5,20 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Infrastructure\Service\MailService.cs" />
-    <Compile Remove="Infrastructure\Service\MailSettings.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Include="Infrastructure\Service\MailService.cs">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Infrastructure\Service\MailSettings.cs">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-
-  <ItemGroup>
+    <PackageReference Include="MailKit" Version="2.10.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.9" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
