--- a/WebApplicationFrontend/package.json
+++ b/WebApplicationFrontend/package.json
@@ -23,8 +23,9 @@
     "@angular/router": "~10.2.0",
     "angular-bootstrap-md": "^10.1.1",
     "angular-responsive-carousel": "^2.0.2",
-    "bootstrap": "^4.5.3",
+    "bootstrap": "^5.0.0-beta1",
     "ngx-toastr": "^13.1.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "toastr": "^2.1.4",
     "tslib": "^2.0.0",
