:sparkles: Finished appointment and patient document microservice

--- a/MedbayTech.Appointment/MedbayTech.Appointment.csproj
+++ b/MedbayTech.Appointment/MedbayTech.Appointment.csproj
@@ -33,4 +33,6 @@
 		<PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
 	</ItemGroup>
 
+	<ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
