:construction: Fixed project references

--- a/MedbayTech.UnitTests/MedbayTech.UnitTests.csproj
+++ b/MedbayTech.UnitTests/MedbayTech.UnitTests.csproj
@@ -29,6 +29,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Backend\Backend.csproj" />
+    <ProjectReference Include="..\MedbayTech.PharmacyIntegration\MedbayTech.PharmacyIntegration.csproj" />
     <ProjectReference Include="..\PharmacyIntegration\MedbayTech.PharmacyIntegration.csproj" />
     <ProjectReference Include="..\WebApplication\WebApplication.csproj" />
   </ItemGroup>
