:construction: Fixed appointmentfilter service and show on map button for graphic editor wpf

--- a/MedbayTech.Appointment/MedbayTech.Appointment.csproj
+++ b/MedbayTech.Appointment/MedbayTech.Appointment.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MedbayTech.Common\MedbayTech.Common.csproj" />
+    <ProjectReference Include="..\MedbayTech.Rooms\MedbayTech.Rooms.csproj" />
   </ItemGroup>
 
 	<ItemGroup>
