--- a/WebApplicationFrontend/package.json
+++ b/WebApplicationFrontend/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~10.2.0",
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
+    "angular-responsive-carousel": "^2.0.2",
     "bootstrap": "^4.5.3",
     "ngx-toastr": "^13.1.0",
     "rxjs": "~6.6.0",
