--- a/MedbayTech.UnitTesting/MedbayTech.UnitTesting.csproj
+++ b/MedbayTech.UnitTesting/MedbayTech.UnitTesting.csproj
@@ -1,8 +1,7 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
@@ -28,11 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MedbayTech.Appointment\MedbayTech.Appointment.csproj" />
-    <ProjectReference Include="..\MedbayTech.Feedback\MedbayTech.Feedback.csproj" />
     <ProjectReference Include="..\MedbayTech.PatientDocuments\MedbayTech.PatientDocuments.csproj" />
-    <ProjectReference Include="..\MedbayTech.PharmacyIntegration\MedbayTech.Pharmacies.csproj" />
-    <ProjectReference Include="..\MedbayTech.Rooms\MedbayTech.Rooms.csproj" />
-    <ProjectReference Include="..\MedbayTech.Users\MedbayTech.Users.csproj" />
   </ItemGroup>
+
 </Project>
