--- a/MedbayTech.UnitTesting/MedbayTech.UnitTesting.csproj
+++ b/MedbayTech.UnitTesting/MedbayTech.UnitTesting.csproj
@@ -27,7 +27,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MedbayTech.Appointment\MedbayTech.Appointment.csproj" />
+    <ProjectReference Include="..\MedbayTech.Feedback\MedbayTech.Feedback.csproj" />
     <ProjectReference Include="..\MedbayTech.PatientDocuments\MedbayTech.PatientDocuments.csproj" />
+    <ProjectReference Include="..\MedbayTech.PharmacyIntegration\MedbayTech.Pharmacies.csproj" />
+    <ProjectReference Include="..\MedbayTech.Rooms\MedbayTech.Rooms.csproj" />
+    <ProjectReference Include="..\MedbayTech.Users\MedbayTech.Users.csproj" />
   </ItemGroup>
 
 </Project>
