--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,8 @@
 version: "3.8"
 
 volumes:
-  mysql-data: {}
-  web-sql:
   postgres-data: {}
-  test-data: {}
-  test-ph-data: {}
+
   
 networks:
   demo:
@@ -13,20 +10,6 @@ networks:
     driver: bridge
 
 services:
-  mysql:
-    image: mysql:latest
-    container_name: mysql
-    restart: always
-    networks:
-      - demo
-    environment:
-      MYSQL_DATABASE: "newdb"
-      MYSQL_USER: "root"
-      MYSQL_PASSWORD: "root"
-      MYSQL_ROOT_PASSWORD: "root"
-    volumes:
-      - mysql-data:/var/lib/mysql
-  
   postgres:
     image: postgres:latest
     container_name: postgres
@@ -34,107 +17,134 @@ services:
     networks:
       - demo
     environment:
-      POSTGRES_USER: "root"
-      POSTGRES_PASSWORD: "root"
+      POSTGRES_USER: "user"
+      POSTGRES_PASSWORD: "user"
       POSTGRES_DB: mydb1
     volumes:
       - postgres-data:/var/lib/postgres
 
-  PhIntegrationSql:
-    image: ph
-    container_name: ph_integration
+  ApiGateway:
+    image: api
+    container_name: api_container
     restart: on-failure
     networks:
       - demo
     depends_on:
-      - mysql
+      - postgres
     environment:
-      DATABASE_USERNAME: "root"
-      DATABASE_PASSWORD: "root"
-      DATABASE_HOST: "mysql"
-      DATABASE_SCHEMA: "newdb"
-      PORT: 50202
-      STAGE: "test"
+      DATABASE_USERNAME: "user"
+      DATABASE_PASSWORD: "user"
+      DATABASE_HOST: "postgres"
+      DATABASE_TYPE: "postgres"
+      DATABASE_SCHEMA: "mydb1"
+      STAGE: "production"
+      PORT: "53843"
     ports:
-      - "50202:50202"
+      - "53843:53843"
     volumes:
-      - mysql-data:/var/lib/mysql:rw
+      - postgres-data:/var/lib/postgres:rw
 
-  GraphicEditorWebServer:
-    image: stefan7/medbaytechge:latest
-    container_name: graphic_editor
+  Feedback:
+    image: feedback
+    container_name: feedback_container
     restart: on-failure
     networks:
       - demo
     depends_on:
-      - mysql
+      - postgres
     environment:
-      DATABASE_USERNAME: "root"
-      DATABASE_PASSWORD: "root"
-      DATABASE_HOST: "mysql"
-      DATABASE_SCHEMA: "newdb"
-      PORT: 8084
-      STAGE: "test"
+      DATABASE_USERNAME: "user"
+      DATABASE_PASSWORD: "user"
+      DATABASE_HOST: "postgres"
+      DATABASE_TYPE: "postgres"
+      DATABASE_SCHEMA: "mydb1"
+      STAGE: "development"
+      PORT: "8080"
     ports:
-      - "8084:8084"
+      - "8080:8080"
     volumes:
-      - mysql-data:/var/lib/mysql:rw
-
-  PhIntegrationTests:
-      image: stefan7/medbaytechphtest:latest
-      container_name: ph_integration_tests
-      depends_on:
-        - mysql
-      environment:
-        DATABASE_USERNAME: "root"
-        DATABASE_PASSWORD: "root"
-        DATABASE_HOST: "mysql"
-        DATABASE_TYPE: "mysql"
-        DATABASE_SCHEMA: "newdb"
-        STAGE: "test"
-      expose: 
-        - "80"
-      networks: 
-        - demo
-      volumes:
-      - mysql-data:/var/lib/mysql
-
-  WebIntegrationTests:
-      image: stefan7/medbaytechwebtest:latest
-      container_name: web_tests
-      depends_on:
-        - mysql
-      environment:
-        DATABASE_USERNAME: "root"
-        DATABASE_PASSWORD: "root"
-        DATABASE_HOST: "mysql"
-        DATABASE_TYPE: "mysql"
-        DATABASE_SCHEMA: "newdb"
-        STAGE: "test"
-      expose: 
-        - "81"
-      networks: 
-        - demo
-      volumes:
-      - mysql-data:/var/lib/mysql    
-        
-#  PhIntegrationSql:
-#    image: ph
-#    container_name: phintegration
-#    restart: on-failure
-#    environment:
-#      PORT: 50202
-#      DATABASE_USERNAME: "root"
-#      DATABASE_PASSWORD: "root"
-#      DATABASE_HOST: "mysql"
-#      DATABASE_SCHEMA: "newdb"
-#      STAGE: "test"
-#      PORT: 8082
-#    ports:
-#      - "8082:8082"
-
-  UnitTests:
-    image: stefan7/medbaytechunit
-    container_name: unit_tests
+      - postgres-data:/var/lib/postgres:rw
+  
+  Rooms:
+    image: rooms
+    container_name: rooms_container
     restart: on-failure
-    
+    networks:
+      - demo
+    depends_on:
+      - postgres
+    environment:
+      DATABASE_USERNAME: "user"
+      DATABASE_PASSWORD: "user"
+      DATABASE_HOST: "postgres"
+      DATABASE_TYPE: "postgres"
+      DATABASE_SCHEMA: "mydb1"
+      STAGE: "test"
+      PORT: "60304"
+    ports:
+      - "60304:60304"
+    volumes:
+      - postgres-data:/var/lib/postgres:rw
+
+  Users:
+    image: users
+    container_name: users_container
+    restart: on-failure
+    networks:
+      - demo
+    depends_on:
+      - postgres
+    environment:
+      DATABASE_USERNAME: "user"
+      DATABASE_PASSWORD: "user"
+      DATABASE_HOST: "postgres"
+      DATABASE_TYPE: "postgres"
+      DATABASE_SCHEMA: "mydb1"
+      STAGE: "test"
+      PORT: "8081"
+    ports:
+      - "8081:8081"
+    volumes:
+      - postgres-data:/var/lib/postgres:rw
+  
+  PatientDocuments:
+    image: documents
+    container_name: documents_container
+    restart: on-failure
+    networks:
+      - demo
+    depends_on:
+      - postgres
+    environment:
+      DATABASE_USERNAME: "user"
+      DATABASE_PASSWORD: "user"
+      DATABASE_HOST: "postgres"
+      DATABASE_TYPE: "postgres"
+      DATABASE_SCHEMA: "mydb1"
+      STAGE: "test"
+      PORT: "50577"
+    ports:
+      - "50577:50577"
+    volumes:
+      - postgres-data:/var/lib/postgres:rw
+
+  Appointment:
+    image: appointment
+    container_name: appointment_container
+    restart: on-failure
+    networks:
+      - demo
+    depends_on:
+      - postgres
+    environment:
+      DATABASE_USERNAME: "user"
+      DATABASE_PASSWORD: "user"
+      DATABASE_HOST: "postgres"
+      DATABASE_TYPE: "postgres"
+      DATABASE_SCHEMA: "mydb1"
+      STAGE: "test"
+      PORT: "8082"
+    ports:
+      - "8082:8082"
+    volumes:
+      - postgres-data:/var/lib/postgres:rw
