--- a/MedbayTech.PatientDocuments/MedbayTech.PatientDocuments.csproj
+++ b/MedbayTech.PatientDocuments/MedbayTech.PatientDocuments.csproj
@@ -6,8 +6,10 @@
 
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.10" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.9" />
 		<PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.0" />
 	</ItemGroup>
 
 	<ItemGroup>
