:whale: Started docker containers with new frontend

--- a/MedbayTech.Appointment/Properties/launchSettings.json
+++ b/MedbayTech.Appointment/Properties/launchSettings.json
@@ -18,6 +18,7 @@
     "MedbayTech.Appointment": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "/",
       "applicationUrl": "http://localhost:5008",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
