--- a/Dockerfile.APIGateway
+++ b/Dockerfile.APIGateway
@@ -8,7 +8,7 @@ COPY WebApplicationFrontend/package.json .
 RUN npm install
 RUN npm install -g @angular/cli@7.3.9
 
-RUN ng build --prod 
+RUN ng build --prod --base-href=/ 
 
 FROM mcr.microsoft.com/dotnet/core/sdk:3.1-buster AS build
 WORKDIR /app
