:construction: Added graphic editor new functionalities

--- a/MedbayTech.Common/MedbayTech.Common.csproj
+++ b/MedbayTech.Common/MedbayTech.Common.csproj
@@ -29,4 +29,8 @@
     <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Domain\Enums\" />
+  </ItemGroup>
+
 </Project>
