--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,9 +38,9 @@ services:
       DATABASE_TYPE: "postgres"
       DATABASE_SCHEMA: "mydb1"
       STAGE: "production"
-      PORT: "53843"
+      PORT: "5000"
     ports:
-      - "53843:53843"
+      - "53843:5000"
     volumes:
       - postgres-data:/var/lib/postgres:rw
 
@@ -58,7 +58,7 @@ services:
       DATABASE_HOST: "postgres"
       DATABASE_TYPE: "postgres"
       DATABASE_SCHEMA: "mydb1"
-      STAGE: "development"
+      STAGE: "test"
       PORT: "8080"
     ports:
       - "8080:8080"
@@ -143,8 +143,8 @@ services:
       DATABASE_TYPE: "postgres"
       DATABASE_SCHEMA: "mydb1"
       STAGE: "test"
-      PORT: "8082"
+      PORT: "8083"
     ports:
-      - "8082:8082"
+      - "8083:8083"
     volumes:
       - postgres-data:/var/lib/postgres:rw
