--- a/Dockerfile.Feedback
+++ b/Dockerfile.Feedback
@@ -12,9 +12,9 @@ COPY . .
 FROM build AS publish
 WORKDIR /app/MedbayTech.Feedback
 
-# ENV PATH $PATH:/root/.dotnet/tools
-# RUN dotnet tool install -g dotnet-ef --version 3.1.9
-# RUN dotnet ef migrations add Init
+ENV PATH $PATH:/root/.dotnet/tools
+RUN dotnet tool install -g dotnet-ef --version 3.1.9
+RUN dotnet ef migrations add Init
 
 WORKDIR /app
 RUN dotnet publish MedbayTech.Feedback/MedbayTech.Feedback.csproj -c Release -o out
