--- a/MedbayTech.PharmacyIntegrationTests/MedbayTech.PharmacyIntegrationTests.csproj
+++ b/MedbayTech.PharmacyIntegrationTests/MedbayTech.PharmacyIntegrationTests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -29,6 +29,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Backend\Backend.csproj" />
+    <ProjectReference Include="..\MedbayTech.PharmacyIntegration\MedbayTech.Pharmacies.csproj" />
   </ItemGroup>
 
 </Project>
