:construction: Patient registration microservice

--- a/WebApplication/WebApplication.csproj
+++ b/WebApplication/WebApplication.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Backend\Backend.csproj" />
+    <ProjectReference Include="..\MedbayTech.Users\MedbayTech.Users.csproj" />
   </ItemGroup>
 
   <ItemGroup>
